--- a/zoom.html
+++ b/zoom.html
@@ -53,12 +53,35 @@
     </div>
     <div class="case-study">
       <h1>Course Introduction + Prefaces</h1>
-      <p>This project was the fourth and final undertaking of the course DSGN 1: Design of Everyday Things, taught by Professor Michael Meyers at the University of California, San Diego.
+      <p>This project was the fourth and final undertaking of the course <b>DSGN 1: Design of Everyday Things</b>, taught by Professor Michael Meyers at the University of California, San Diego.
 Centered around UCSD’s own Design Lab Director Don Norman’s The Design of Everyday Things, the course sought to challenge its students through
 applying cognitive science principles to the design of both simple and complex technology. Students were introduced to foundational concepts
 such as affordances, constraints, mappings, and conceptual models, and asked to apply their understanding of these concepts, along
 with their observational and design skills, through a sequence of four group projects that reimagined everything from sparkwheel lighters to gear shifts to video chat interfaces.
       </p>
+      <h2>Prompt</h2>
+      <h5>“The final project should exploit the techniques covered in the first three projects*.
+        The choice of topic is yours. In addition to observing, interviewing, and providing a
+        data-driven design you will create a short video presenting your design.”
+      </h5>
+      <p>*Techniques covered in the mentioned first three projects included:
+        “gain additional experience seeing as a designer by identifying problems with the design of
+        a common everyday object, apply the ideas of conceptual models and gulfs of execution
+        and evaluation in your analysis of the object, and start to develop experience with feeding
+        the ideation process” (Projects 1 and 2), and designing for error by
+        “reducing the opportunities to make errors”, “accepting that people will make errors and providing
+        ways to mitigate their impact and recover from them” (Project 3).
+      </p>
+      <p>Essentially, we were tasked to make improvements to an existing digital or physical interface that we saw fit.<br>
+      </p>
+      <h2>Collaboration</h2>
+      <p>I had a really great time working with Janzen Molina, Rajvir Logani, Shihan Gong, Sunay Bargotra, and Johnathan Tinajero
+        on this project, and our original write-up submission can be found <a href="https://docs.google.com/document/d/1cF1ULnYHJgvkF7I8z9CAepS1awFnxYDaHfZWUiF4yhU/edit?usp=sharing">here</a>.
+        Although I will be going into greater detail on my role and contributions within this project,
+        this case study will draw upon group findings and could not have been possible without them!
+      </p>
+
+      <h1>Brainstorming</h1>
     </div>
   </body>
 </html>
