--- a/zoom.html
+++ b/zoom.html
@@ -82,6 +82,252 @@ with their observational and design skills, through a sequence of four group pro
       </p>
 
       <h1>Brainstorming</h1>
+      <p>Our method of brainstorming involved making a collaborative mind map of our collective ideas,
+        categorized as either digital or physical. Considering we had a little more time for this project in
+        comparison to our past projects, we leaned towards our digital options as a change from our experience with
+        physical redesigns (take a look at our previous physical redesigns <a href="ADD LINK">here</a>!)
+      </p>
+      <img src="img/zoom/mindmap.png" alt="" id="mindmap">
+      <a href="MIND MAP LINK" id="mindmap-text">View our mindmap!</a>
+      <h2><br>Landing on a Design Issue and Preliminary User Research</h2>
+      <p>We landed on two options that were both familiar to us as students and offered a narrow enough
+        scope such that we could really hone in on individual features: <b>Zoom</b>, a widely used video
+        communication platform, and the <b>Pronto App</b>, the mobile application for the San Diego Metropolitan Transit System.
+      </p>
+      <div class="options-postit">
+        <p>- Pronto Scan<br><b>- Pronto App</b><br>- Slack<br>- Facebook<br>- Linkedin<br>- Canvas
+          <br><b>- Zoom</b><br>- UCSD COVID SCAN<br>- Miro
+        </p>
+      </div>
+      <div class="bottom-postits">
+        <div class="postit" id="zoom-postit">
+          <p><b>Zoom</b><br>- Joining calls<br>- Breakout rooms<br>- Opens safari to ask again
+            <br>- Zoom home screen features<br>- Interface between devices<br>- Bottom task bar
+            <br>- Process of joining<br>- Process of joining<br>- Communication in zoom (video. mute, chat, reactions)
+          </p>
+        </div>
+        <div class="postit" id="pronto-postit">
+          <p><b>Pronto</b><br>- Scanning your phone<br>- Process of adding student pass<br>- Glare
+            <br>- Phone/device positioning<br>- Relatively small qr code<br>- When screen is cracked in doesn't really work at all
+            <br>- Start up takes 3-5 seconds<br>- Bus schedule > scanning<br>- More people, bus drivers skip out on scanning
+            <br>- Less people, can take a minute, can take an individual even 30 seconds<br>- Bus drivers annoyed when people scan<br>- Interview some bus drivers
+            <br>- Instead of qr code scanning, pronto could provide a general qr code for everyone to scan<br>- NFC option<br>- Platform for people to put phones down on
+          </p>
+        </div>
+      </div>
+
+      <p>We took a closer look at aspects of Zoom and Pronto that we could focus on, and
+        <b>ultimately decided on Zoom for its accessibility to all of us as student designers</b>
+. While Pronto’s design raises really great design conversations on intermediates of physical and digital designs,
+i.e. the interaction between the physical scanners on the bus and Pronto’s digital ticket interface design,
+the time constraints of the project deadline weren’t feasible for a project done virtually by us.
+Zoom’s accessibility to us is also an indicator of accessibility to the greater student and workforce population,
+meaning our user research down the road spanned a greater audience.
+      </p>
+      <p>We initially conducted an interview that questioned all of the communication features within Zoom:
+         video, microphone, chat, and reactions. However, we recognized that covering all of these features would
+         likely be too overwhelming and lack proper detail and quality to each feature, so
+       </p>
+       <h5>we ultimately decided to <b>focus on the chat</b>, as our data had shown multiple concerns in that particular area. Mentioned problems included issues with
+       </h5>
+       <img src="img/zoom/cs-quotes.png" alt="" id="quotes">
+       <h1>User Research</h1>
+       <h2>Methodology</h2>
+       <p>As mentioned, we had to conduct two stages of interviews, as our initial
+         scope ended up being too broad. I’ll mainly be explaining the questions from
+         Stage 2 because those were the finalized ones used for data collection on the chat,
+         but Stage 1 Questions can be found <a href="ADD LINK">here</a>. We included General Questions, Task-Based Questions,
+         and Post-Task Questions. While the interviewee was on call, we asked them to show us their
+         screen and actions using another device, and we recorded their answers on a Google Form, following a master-apprentice model.
+       </p>
+       <h2>Audience</h2>
+       <p>Our interviewees were mostly students from UCSD, but also included siblings,
+         parents, and friends that spanned different age ranges and occupations. We understood
+         that our user research was influenced by its majority in participants under
+         23 years old, and technological skill may vary across ages, but we still feel
+         it is a relatively accurate representation of Zoom’s target audience of students,
+         teachers, and workers, as its primary function is video telephony communication for school or work.
+       </p>
+       <h2>Stage 2 Chat Interview Questions</h2>
+       <img src="img/zoom/stage2qs.png" alt="" id="stage2qs">
+       <p>We interviewed participants and recorded them on this form: <a href="LINK">Interview Form</a></p>
+       <h2>Raw Data</h2>
+       <p><a href="https://docs.google.com/document/u/0/d/1XVyHNlaM3Ch_P4R673wQ5aS7F3wxXeXZWS2khktq9n8/edit">Group Draft Interview Questions</a><br>Our start-up draft questions before we create the actual interview form<br><br>
+         <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #1 Google Form</a><br>Questions that focused on all communication functions of Zoom<br><br>
+         <a href="https://docs.google.com/forms/d/1W5P9MV5qUTBcgzj8CJAh0VudrA9tQA9nnOpX_64_4DQ/edit">Final Project Interview #2 Google Form</a><br>Fixed interview questions used for interviews<br><br>
+         <a href="https://docs.google.com/spreadsheets/d/1-P6zRMImYbeLLXHDc5Iy9mViqoBeSDhEjuM6D0eBHhE/edit?usp=sharing">Zoom User Research Responses</a><br>Final Google Sheet collected from interviews and used to complete analysis<br><br>
+       </p>
+       <h1>Problems + Trends</h1>
+       <h2>Hidden Affordances within Chat Navigation</h2>
+       <p>The chat recipient navigation lacked clear signifiers.
+       </p>
+       <h5><b>⅓ of our participants</b> pointed out frustration over scrolling through the list of people to message, especially in larger meetings, </h5>
+       <p>and one expressed the need for a search bar to mitigate this; however,
+         we found that there is a search bar, but its faintness in color, absence of an icon
+         signifier and placement as flush with the rest of the participant names can make it
+         seem almost like a subtitle, and not a clickable function.
+       </p>
+       <img src="img/zoom/chatSearch.png" alt="" id="chatSearch">
+       <h2>Culturally Inconsistent Signifiers</h2>
+       <p>Zoom allows you to save a .txt file of all the recorded messages in the chat to your computer, but
+         there is no singular icon that indicates that. It can be found in the ellipses, which is typically
+         understood as an opportunity for “additional information,” but “Save chat” is the only available option.
+          This complicates what could’ve been a one step process by a singular button, into a two step process that
+          hides the available function, and ½ of our participants had to guess where the button to save the transcript was.
+        </p>
+        <img src="img/zoom/chat2.png" alt="" id="chat2">
+        <p>Our participants also seemed to struggle with attaching files to the chat because that signifier is not generally used.</p>
+        <img src="img/zoom/attachingFiles.png" alt="" id="attachingFiles">
+        <h2>Transcript Ambiguity</h2>
+        <p>Task #6 asked users to save a transcript of the Zoom chat on their computer and send
+          the file back into the Zoom chat. Although all other tasks merited some 5s, not a single
+          participant rated this task’s ease to be a 5. This is most likely because once the chat is
+          saved, all the feedback a user receives is “Chat saved”. Although there is a Show in
+          Finder button, it doesn’t lead to a known file, but rather a Zoom generated folder, and the
+          button itself wouldn’t be accessible to users after a certain amount of time. Participants also
+          tended to accidentally send recently opened files instead of the specific transcript, so
+          the ambiguity of transcript storage is the main issue.
+        </p>
+        <div class="saveChat">
+          <img src="img/zoom/saveChat1.png" alt="" class="saveChatImg">
+          <img src="img/zoom/saveChat2.png" alt="" class="saveChatImg">
+        </div>
+        <h2>Switching Between Direct vs. Group Message</h2>
+        <p>One of the most common errors brought up by participants was accidentally sending a message
+          intended as a direct message to the chat with everyone, and vice versa of sending a chat intended
+          for everyone to a direct message chat. A participant provided a prime example of the error,
+          recalling that their “teacher once meant to send a student a direct message and the whole class
+          found out [their] friend was failing” the class. These mistakes are likely occurring from the
+          indistinguishability within the dropdown of who the recipient is. Although there are differences
+          in signifiers such as “Everyone” being grey and with black text and direct message being blue with white
+          text and “(Direct Message)” in red. Because errors are still being made in spite of these signifiers,
+          we know users require a more drastic model to feel secure in their shift.
+        </p>
+        <img src="img/zoom/dm1.png" alt="" class="dm">
+        <h2>Locating Messages in Direct vs. Group Message</h2>
+        <p>Because direct messages, messages sent by everyone, and breakout room messages are all in the
+          same chat stream, it’s not only difficult to keep track and switch between recipients, but to
+          find particular past messages. Participants noted that it was difficult to manage direct messages
+          that were integrated within the main chat with everyone because the direct message moves up
+          with every message sent to the main chat.
+        </p>
+        <img src="img/zoom/dm2.png" alt="" class="dm">
+        <h2>Breakout Room Confusion</h2>
+        <p>The singular chat stream raises specific concerns with breakout room chats because participants
+          noted that it was unclear whether messages sent to the breakout room would only be seen by others
+          in the breakout room, or by everyone in the meeting. The reason for this confusion is likely because
+          in the breakout room, message recipients will say “to everyone”, yet everyone means everyone
+          in the breakout room, not in the meeting.
+        </p>
+        <div class="breakoutChat">
+          <img src="img/zoom/breakout1.png" alt="" class="breakout">
+          <img src="img/zoom/breakout2.png" alt="" class="breakout">
+        </div>
+        <h2>Chat Window Positioning</h2>
+        <p>Zoom has three different chat window positions, one that’s docked to the side,
+          one that’s a separate window, and one in the corner of the Zoom; users can manually
+          shift between the three, but the automatic setting seems to be arbitrary. Participants preferred
+          to have their chat windows docked to the right side of the Zoom, specifically noting that it was
+          culturally consistent with the structure of other common platforms such as Twitch. For the pop-up window,
+          users seemed to like that it took up a small amount of space, but this did limit chat space, and the pop-up
+          window itself would often cover the Zoom meeting.
+        </p>
+        <img src="img/zoom/chat3.png" alt="" id="chat3">
+        <h2>Recap</h2>
+        <p>Watch a recap of the Problems + Trends, put in the context of realistic scenarios!</p>
+        <p>PUT IN YOUTUBE LINK HERE</p>
+
+        <h1>Redesign</h1>
+        <h2>Competitors</h2>
+        <img src="img/zoom/zoomComp.png" alt="" class="compImg">
+        <img src="img/zoom/meetComp.png" alt="" class="compImg">
+        <img src="img/zoom/teamsComp.png" alt="" class="compImg">
+        <img src="img/zoom/skypeComp.png" alt="" class="compImg">
+        <img src="img/zoom/bluejeansComp.png" alt="" class="compImg">
+        <h2>Design Spaces</h2>
+        <h2><i>Compactness vs Interchangibility</i></h2>
+        <h3><b>Compactness</b> is how condensed the chat feature is, and how much space it leaves for the video interface.<br>
+          <b>Interchangeability</b> is how easy it is to navigate between different conversations.
+        </h3>
+        <img src="img/zoom/CvI.png" alt="" class="table">
+        <br>
+        <img src="img/zoom/CvIgraph.png" alt="" class="graph">
+        <h2><i>Clarity vs Aesthetic</i></h2>
+        <h3><b>Clarity</b> is how straightforward the program is to use and if it has good signifiers.<br>
+          <b>Aesthetic</b> is how appealing the design of the interface is. It also accounts for how customizable the application is.
+
+        </h3>
+        <img src="img/zoom/CvA.png" alt="" class="table">
+        <br>
+        <img src="img/zoom/CvAgraph.png" alt="" class="graph">
+
+        <h2>Prototype Justification</h2>
+        <img src="img/zoom/prototype1.png" alt="" id="prototype1">
+        <p>We made all of the buttons more defined in general, but our redesign mainly features</p>
+        <h5><b>more defined chat vessels</b>,<br>with one for the main meeting,<br>
+ additional breakout rooms that the user was added into,<br>as well as any user-created direct message chats or group chats.
+        </h5>
+        <p>To preview the chat, one simply hovers over that chat’s icon. <br><br>
+          Additional changes were made to message typing as well, such as replacing
+          the “Attach File” and “Download Transcript” buttons and also adding a formal “Send” button.
+        </p>
+        <h2>Chat Placement</h2>
+        <p>To combat the disruption caused by the pop-up chat window, we decided that no
+          matter if the user was maximized in full screen or in a normal window, <b>the chat
+          would expand to the side by default</b>. However, users will also have the option to dock the chat off
+          into a separate window if that’s their preference by hovering over the split between the meeting and the chat.
+        </p>
+        <h2>Messaging Interchangeability</h2>
+        <p>The original chat had low discoverability in where to alternate between sending a message to “Everyone” versus
+          sending a “Direct Message,” which led to description-similarity and mode-error slips and memory-lapse mistakes,
+          as users a) couldn’t find where to send a direct message, b) forgot to change it back to “Everyone” after
+          direct messaging, and c) had trouble discerning which messages were direct messages, as they often got
+          lost in the chat stream. We determined that it was best to <b>break up the chat stream into individual chats instead of a
+          single continuous one</b>. This could be considered a constraint, as the elimination of the option to send a direct
+          message in the same place as the main chat prohibits the user from even mixing it up that way.<br><br>
+          Although we considered separating sections into email-style inboxes, our interviewees did like the original chat’s
+          simplicity, so we compromised by incorporating different chats, but the ability to preview the chat by
+          hovering over the chat icons, inspired by Discord.
+        </p>
+        <h2>Searching for Participants</h2>
+        <p>The original chat interface included a search function; however, it was unclear and blended into the usual
+          “Send a chat to…” title. We clarified this to be <b>automatically searchable when starting a new chat</b>,
+          so users know who they’re sending messages to.
+        </p>
+        <h2>Breakout Rooms</h2>
+        <p>It was mentioned by an interviewee that in a Breakout Room, it was difficult to distinguish if the
+          send “To: Everyone” was to everyone in the meeting or everyone in the breakout room, which indicated the
+          lack of clarity in signifiers, as well as a preface to more mode-error slips as that function is used
+          identically to control recipients in the main chat room as well. Because of this, we <b>generated a new chat
+          for each breakout room</b>, allowing users to feel secure in who they’re sending the messages to from the large title of
+          “Breakout Room _”, as well as allowing users to <b>revisit breakout room chats</b> to talk to their
+          group members in the event of any miscommunication.
+        </p>
+        <h2>Unclear Functions</h2>
+        <p>The three buttons for sending a message were a piece of paper, an emoji, and an ellipses
+          who’s only drop down was to “Save Chat.” This wasn’t really clear to our users, particularly
+          because of the lack of cultural constancy, so we <b>swapped the signifiers</b> out for a paperclip for
+          “Attach File”, and a download for “Save Transcript”. The addition of the “Send” button came with a
+          user whose enter key was malfunctioning, which the original chat interface lacked alternatives for.
+        </p>
+        <h2>Trade-offs</h2>
+        <p>Many of the programs trade-off clear signifiers for more space. They prioritize the ability to
+          have a lot on the screen by making the buttons smaller. However, this can lead to a bigger gap between
+          the gulf of execution and gulf of evaluation. Having a lot of space for viewing meetings is beneficial;
+          however, many of our participants have stated errors because of misclicks or due to the lack of clear
+          feedback. For example, the Zoom direct message only states in small text “(Direct Message).” This leads
+          users to double and triple check if they are messaging someone, fearful of making a slip. This led to our
+          redesign to include bigger buttons and separate panels for different chats. This may have used more space;
+          however, it allows users to see everything happening clearly. We implemented a minimize button for users
+          who do not care about seeing the chat and instead wish to see the lecture in full screen.
+        </p>
+
+
+        <h1>Final Prototype</h1>
+        <h2>Run-Through</h2>
+        <video width="400" controls autoplay>
+          <source src="D:/mov1.mov" type="video/mp4">
+        </video>
     </div>
   </body>
 </html>
