--- a/zoom.html
+++ b/zoom.html
@@ -28,10 +28,10 @@
   <body>
     <div id="title-banner">
       <div class="top-title">
-        <div class="title-column">
+        <div class="title-column" id = "img-col">
           <img src="img/zoom/zoom-main-img.png" alt="" id="title-img">
         </div>
-        <div class="title-column">
+        <div class="title-column" id = "text-col">
           <h1 id="title">Zoom<br>Redesign</h1>
           <p id="subtitle">Reinventing written communication on videotelephony platforms.</p>
         </div>
@@ -325,9 +325,89 @@ meaning our user research down the road spanned a greater audience.
 
         <h1>Final Prototype</h1>
         <h2>Run-Through</h2>
-        <video width="400" controls autoplay>
-          <source src="D:/mov1.mov" type="video/mp4">
+        <video width="700" controls autoplay>
+          <source src="img/zoom/Zoom Prototype.MOV" type="video/mp4">
         </video>
+        <h2>General Redesign</h2>
+        <img src="img/zoom/redesign1.png" alt="" class="redesign-image">
+        <h5>Overall larger and colored buttons for more definition and clarity</h5>
+        <h2>Introduction of a Side Chat Bar</h2>
+        <img src="img/zoom/redesign2.png" alt="" class="redesign-image">
+        <h5>Side Chat Bar for users’ main room chat, breakout room chat, and any additional created
+          direct-messaging or group chats; To preview the chat, can hover over icon (Discord-inspired)
+        </h5>
+        <h2>Breakout Room Chats Revisitable</h2>
+        <img src="img/zoom/redesign3.png" alt="" class="redesign-image">
+        <h5>The introduction of separated chat streams means users can now revisit Breakout Room Chats after the
+          Breakout Room has ended; In the shown instance, it was helpful for members to reconsider their answers,
+          promoting communication
+        </h5>
+        <h2>Signifier Change</h2>
+        <div class="signifiers">
+          <img src="img/zoom/signifier1.png" alt="" class="signifier-image">
+          <img src="img/zoom/signifier2.png" alt="" class="signifier-image">
+        </div>
+        <h5>Changed the signifiers of message functions to be more culturally constant;
+          Paperclip for Attaching Files, Download for Save Transcript, and the addition of a Send button
+        </h5>
+        <h2>Starting New Chats</h2>
+        <img src="img/zoom/redesign4.png" alt="" class="redesign-image">
+        <h5>To start a new chat, the user simply has to click the “+” button, and a blank chat will appear;<br>
+          The “Start a new chat with…” and magnifying glass will signify users to select a recipient
+        </h5>
+        <h2>Searching for Recipients</h2>
+        <img src="img/zoom/redesign5.png" alt="" class="redesign-image">
+        <img src="img/zoom/redesign6.png" alt="" class="redesign-image">
+        <h5>Once the user clicks on the search bar, a drop down menu will appear,
+          where they can scroll through, or begin typing, where all participants whose names begin with that letter will appear
+        </h5>
+        <h2>Creating Group Chats</h2>
+        <img src="img/zoom/redesign7.png" alt="" class="redesign-image">
+        <img src="img/zoom/redesign8.png" alt="" class="redesign-image">
+        <img src="img/zoom/redesign9.png" alt="" class="redesign-image">
+        <h5>One the new features we added was the ability to create group chats, after seeing how
+          difficult it was to direct message every single person a user wanted to; Once the chat was made, the icon appears on the side
+        </h5>
+
+        <h1>Iteration Overview</h1>
+        <p>According to Don Norman, there are two phases of the <b>Double Diamond of Design</b>:
+          finding the right problem (<b>discovering-divergent and defining-convergent</b>) and finding
+          the right solution (<b>developing-divergent and delivering-convergent</b>). In order to do this, designers
+          follow a cycle for human-centered design consisting of 1) <b>observation</b>, 2) <b>idea generation (ideation)</b>, 3) <b>prototyping</b>, and 4) <b>testing</b>.
+        </p>
+        <p>During the <b>divergent</b> stage of finding the problem, we discovered the issue through observation. We employed the master-apprentice model of interviewees
+          demonstrating their use of Zoom communication features such as the microphone, video, chat, and reactions to see the applied ethnography of the natural occurrences
+          they encounter. As opposed to marketing research that intends to conduct large-scale observation in pursuit of mass buying, our design research focused on the
+          niche of population that used Zoom, which was a target audience of students ranging from elementary level to college level, as well as industry professionals who use
+          Zoom for meetings.
+        </p>
+        <p>Our <b>convergent</b> stage of definition and ideation began by identifying our interview data from the first form, where we found some accidents regarding microphone
+          and video inconsistency, an indifference for reactions, and the outline of some issues with chat, like the lack of discoverability of direct messaging. From there,
+          we actually revisited the divergent stage and observed using a new form, this time highlighting chat features. Only then did we land on our final problem, which was
+          chat confusion, and thus a consequent need for separation between messages.
+        </p>
+        <p>After that, we began a <b>divergent</b> stage of developing, and began prototyping. There were a few components that we were keeping in mind: a) clarifying recipients
+          and chats to minimize errors and b) though the chat is pretty well-used, Zoom’s primary function is a video telephony communication method, meaning that we wanted to
+          preserve written communication while saving space. We made some low-fidelity wireframes, which involved a lot of back and forth critique that
+          helped us identify unseen problems. We played around with alternate designs centered around tabs and email-style inboxes, but
+          ultimately integrated all of our critiques for an interchangeable yet compact chat into a final design of a Discord-style interchangeability system.
+        </p>
+        <div class="iteration">
+          <div class="iteration-column">
+            <img src="img/zoom/iteration1.png" alt="" class="iteration-image">
+            <img src="img/zoom/iteration3.png" alt="" class="iteration-image">
+            <img src="img/zoom/iteration5.png" alt="" class="iteration-image">
+          </div>
+          <div class="iteration-column">
+            <img src="img/zoom/iteration2.png" alt="" class="iteration-image">
+            <img src="img/zoom/iteration4.png" alt="" class="iteration-image">
+            <img src="img/zoom/iteration6.png" alt="" class="iteration-image">
+          </div>
+        </div>
+        <p>Since this was a class project with a limited project deadline, we didn’t have a great chance to complete the final <b>convergent</b>
+          stage of delivering by testing, but we would hypothetically disseminate a working prototype to our initial interview group to identify any
+          improvements or continued dissatisfactions.
+        </p>
     </div>
   </body>
 </html>
