--- a/play.html
+++ b/play.html
@@ -235,7 +235,7 @@
             <img src="img/play-multi/multi6tn.jpg" alt="" class="multi-img">
           </div>
           <div class="img-div">
-            <img src="img/play-multi/multi9tn.jpg" alt="" class="multi-img">
+            <img src="img/play-multi/multi9tn.JPG" alt="" class="multi-img">
           </div>
         </div>
         <div class="multimedia-column">
@@ -243,7 +243,7 @@
             <img src="img/play-multi/multi3tn.jpg" alt="" class="multi-img">
           </div>
           <div class="img-div">
-            <img src="img/play-multi/multi1tn.gif" alt="" class="multi-img">
+            <img src="img/play-multi/multi1tn.jpg" alt="" class="multi-img">
           </div>
         </div>
       </div>
@@ -252,9 +252,120 @@
       </div>
     </div>
     <div class="play-display" id="2019">
-      <p>2019-</p>
+      <div class="nineteen">
+        <div class="nineteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2019/1tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/4tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/7tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/10tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/13tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/16tn.jpg" alt="" class="nineteen-img">
+          </div>
+        </div>
+        <div class="nineteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2019/2tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/5tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/8tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/11tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/14tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/17tn.jpg" alt="" class="nineteen-img">
+          </div>
+        </div>
+        <div class="nineteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2019/3tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/6tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/9tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/12tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2019/15tn.jpg" alt="" class="nineteen-img">
+          </div>
+          <div class="nineteen-text">
+            <p>2019 -</p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="play-display" id="2015">
+      <div class="fifteen">
+        <div class="fifteen-text">
+          <p>2015-2018</p>
+        </div>
+        <div class="fifteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/1tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/4tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/7tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/10tn.jpg" alt="" class="fifteen-img">
+          </div>
+        </div>
+        <div class="fifteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/2tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/5tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/8tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/11tn.jpg" alt="" class="fifteen-img">
+          </div>
+        </div>
+        <div class="fifteen-column">
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/3tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/6tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/9tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/12tn.jpg" alt="" class="fifteen-img">
+          </div>
+          <div class="img-div">
+            <img src="img/play-sketches/2015-2018/13tn.jpg" alt="" class="fifteen-img">
+          </div>
+        </div>
+      </div>
       <p>2015-2018</p>
     </div>
     <div class="play-display" id="digi">
@@ -264,7 +375,107 @@
       <p>MISCELLANEOUS</p>
     </div>
     <div class="play-display" id="vis41">
-      <p>VIS 41 DESIGN COMMUNICATION</p>
+      <div id="vis41-title">
+        <p><b>VIS 41</b> DESIGN COMMUNICATION</p>
+        <p><b>CONNOTATIVE PRINT</b></p>
+      </div>
+      <div class="connotative">
+        <div class="connotative-column" >
+          <div class="connotative-row1">
+            <img src="img/play-vis41/play-display/connotative1.png" alt="">
+            <img src="img/play-vis41/play-display/connotative2.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/V2connotative1.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/connotative3.png" alt="">
+          </div>
+        </div>
+        <div class="connotative-column">
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/connotative-font1.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/connotative4.png" alt="">
+          </div>
+        </div>
+        <div class="connotative-column">
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/c-font1.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/c-font2.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/c-font3.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/c-font4.png" alt="">
+          </div>
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/V3connotative1.png" alt="">
+          </div>
+        </div>
+        <div class="connotative-column">
+          <div class="connotative-div">
+            <img src="img/play-vis41/play-display/connotative-final.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="denotative-title" id="vis41-title">
+        <p><b>DENOTATIVE PRINT</b></p>
+      </div>
+      <div class="denotative">
+        <div class="denotative-top">
+          <div class="denotative-top-rows">
+            <div class="row1">
+              <img src="img/play-vis41/dps1/v1.png" alt="">
+              <img src="img/play-vis41/dps1/v2.png" alt="">
+              <img src="img/play-vis41/dps1/v3.png" alt="">
+              <img src="img/play-vis41/dps1/v4.png" alt="">
+              <img src="img/play-vis41/dps1/v5.png" alt="">
+            </div>
+            <div class="row2">
+              <img src="img/play-vis41/dps1/v6.png" alt="">
+              <img src="img/play-vis41/dps1/v7.png" alt="">
+            </div>
+            <div class="row3">
+              <img src="img/play-vis41/dps2/v1.png" alt="">
+              <img src="img/play-vis41/dps2/v2.png" alt="">
+              <img src="img/play-vis41/dps2/v3.png" alt="">
+              <img src="img/play-vis41/dps2/v4.png" alt="">
+              <img src="img/play-vis41/dps2/v5.png" alt="">
+            </div>
+          </div>
+          <div class="denotative-main">
+            <img src="img/play-vis41/denotative-main.png" alt="" id="denotative-main">
+          </div>
+        </div>
+        <div class="denotative-bottom">
+          <div class="row4">
+            <img src="img/play-vis41/dps2/v6.png" alt="">
+            <img src="img/play-vis41/dps2/v7.png" alt="">
+            <img src="img/play-vis41/dps2/v8.png" alt="">
+            <img src="img/play-vis41/dps2/v9.png" alt="">
+            <img src="img/play-vis41/dps2/v10.png" alt="">
+            <img src="img/play-vis41/dps2/v11.png" alt="">
+          </div>
+          <div class="row5">
+            <img src="img/play-vis41/dps3/v1.png" alt="">
+            <img src="img/play-vis41/dps3/v2.png" alt="">
+            <img src="img/play-vis41/dps3/v3.png" alt="">
+            <img src="img/play-vis41/dps3/v4.png" alt="">
+            <img src="img/play-vis41/dps3/v5.png" alt="">
+            <img src="img/play-vis41/dps3/v6.png" alt="">
+            <img src="img/play-vis41/dps3/v7.png" alt="">
+            <img src="img/play-vis41/dps3/v8.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="image-title" id="vis41-title">
+        <p><b>IMAGE MAKING</b></p>
+      </div>
     </div>
     <div class="play-display" id="vis80">
       <p>VIS 80 INTRO TO STUDIO</p>
